--- a/style.css
+++ b/style.css
@@ -33,15 +33,35 @@ body, html {
 #introBox {
   /*background-color: white;*/
   background-color: rgba(250,250,250,.9);
+  padding: 1rem;
   margin-top: 10%;
   width: 30%;
+  /*
   height: 40%;
+  */
+  height: 240px;
   box-shadow: 0 0 10px rgba(0,0,0,0.6);
   text-align: center;
   border-radius: 20px;
   
   text-shadow: 2px 2px 6px #D3D3D3; /* AWESOME */
   /*border: 1px black solid;*/
+}
+@media (max-width: 930px) {
+  #introBox {
+    width: 40%;
+  }
+}
+@media (max-width: 700px) {
+  #introBox {
+    width: 60%;
+  }
+}
+@media (max-width: 500px) {
+  #introBox {
+    width: 80%;
+    margin-top: 20%;
+  }
 }
 #introBox h2 {
   font-weight: 400;
@@ -71,6 +91,24 @@ body, html {
   /*padding: 1rem;*/
   margin-left: 2rem;
 }
+#mobileAbout {
+  display: none;
+}
+@media (max-width: 700px) {
+  #navContainer {
+    justify-content: space-around;
+  }
+  #nav3 {
+    margin-left: 0;
+    /*margin: 0 2rem;*/
+  }
+  #mobileAbout {
+    display: inline;
+  }
+  #desktopAbout {
+    display: none;
+  }
+}
 #nav3 a {
   padding: 1rem;
   text-decoration: none;
@@ -81,6 +119,7 @@ body, html {
   background-color: white;
   color: black;
 }
+
 
 
 /*
@@ -135,6 +174,20 @@ body, html {
 #tag2 {
   margin-left: 5rem;
 }
+#mobileSkillsTag {
+  display: none;
+  margin-left: 5rem;
+  margin-top: -50;
+  position: absolute;
+}
+@media (max-width: 930px) {
+  #tag2 {
+    display: none;
+  }
+  #mobileSkillsTag {
+    display: inline;
+  }
+}
 #tag3 {
   margin-left: 8rem;
 }
@@ -147,6 +200,7 @@ body, html {
 #tag5 {
   margin-left: 11rem;
 }
+/*
 .tag2 {
   background-color: black;
   color: white;
@@ -155,6 +209,14 @@ body, html {
   width: 70px;
   text-align: center;
 }
+*/
+
+
+
+
+
+
+
 #portfolioContainer2 {
   border-bottom: 3px black solid;
   padding-bottom: 3rem;
@@ -164,10 +226,11 @@ body, html {
   text-align: center;
   margin-bottom: 3rem;
 }
+/*
 #imgDiv {
   margin-top: 3rem;
 }
-
+*/
 #imgDiv img {
   border: 1px black solid;
 }
@@ -202,6 +265,33 @@ body, html {
   font-size: 80%;
 }
 
+#mobilePortfolioContainer {
+  display: none;
+  border-bottom: 3px black solid;
+  padding-bottom: 3rem;
+}
+@media (max-width: 930px) {
+  #mobilePortfolioContainer {
+    display: inline;
+  }
+  #portfolioContainer2 {
+    display: none;
+  }
+  .imgCard {
+    margin: 2rem 0;
+  }
+  .imgCard img {
+    width: 450px;
+    height: 312px;
+  }
+}
+@media (max-width: 600px) {
+  .imgCard img {
+    width: 360px;
+    height: 250px;
+  }
+}
+
 
 
 
@@ -216,8 +306,48 @@ body, html {
   border-bottom: 3px black solid;
   padding-top: 2rem;
 }
+@media (max-width: 930px) {
+  #skillsContainer {
+    border-top: 3px black solid;
+    margin-top: 4rem;
+  }
+}
 #skillsInnerContainer {
   padding: 1rem 10rem;
+}
+#mobileSkillsInnerContainer {
+  display: none;
+}
+#mobileSkillsInnerContainer2 {
+  display: none;
+}
+@media (max-width: 930px) {
+  #mobileSkillsInnerContainer {
+    display: inline;
+  }
+  #skillsInnerContainer {
+    display: none;
+  }
+  #mobileSkillsInnerContainer2 {
+    display: none;
+  }
+}
+@media (max-width: 700px) {
+  #mobileSkillsInnerContainer2 {
+    display: inline;
+  }
+  #mobileSkillsInnerContainer {
+    display: none;
+  }
+  #skillsInnerContainer {
+    display: none;
+  }
+  #skillsContainer {
+    height: 630px;
+  }
+  #row3 {
+    margin-left: 1rem;
+  }
 }
 .box {
   /*border: 1px black solid;*/
@@ -259,75 +389,36 @@ body, html {
   /*margin-left: 6rem;*/
   /*margin-right: -85;*/
 }
-
-
-
-
-
-
-
-
-/*
-#educationContainer {
-  height: 640px;
-  margin-top: -18;
-  padding-top: 2rem;
-  border-bottom: 3px black solid;
-  color: white;
-  text-shadow: 2px 2px 4px black;
-  font-family: 'Arial';
-  
-}
-.educationBox {
-  background-color: #696969;
-  margin: 1rem 0;
-  padding: 1rem 2rem;
-  border-radius: 20px;
-  width: 50%;
+@media (max-width: 470px) {
+  #mobileWebpack {
+    /*
+    width: 100px;
+    height: 100px;
+    */
+    margin-left: -30;
+  }
 }
 
-#educationInfo {
-  margin-left: 2rem;
-  padding-top: .75rem;
-}
-#educationInfo p {
-  margin: 0;
-}
-.educationBox span {
-  font-size: 20px;
-}
-.educationBox li {
-  margin: 5px 0;
-}
 
-#universityDiv {
 
-}
-*/
+
+
+
+
 
 
 #educationContainer2 {
-  padding: 4rem 2rem;
-  height: 420px;
+  padding: 4rem 1rem;
+  height: auto;
   border-bottom: 3px black solid;
 }
 .textBox {
   width: 300px;
-  /*margin: 0 1rem;*/
-  /*border: 1px black solid;*/
 }
 .textBox h3 {
   margin-top: 2rem;
   text-align: center;
 }
-/*
-.textBox ul {
-  margin-top: 2rem;
-}
-.textBox li {
-  margin: 1rem 0;
-}
-*/
 .circleContainer {
   border-radius: 50%;
   width: 100px;
@@ -339,11 +430,6 @@ body, html {
 .circleContainer img {
   margin-top: .5rem;
 }
-#educationText {
-  /*padding-left: 1rem;*/
-  /*border: 1px black solid;*/
-}
-
 #universityText {
   font-size: 18px;
   margin-bottom: 5px;
@@ -355,20 +441,29 @@ body, html {
 #yearText {
   margin: 0;
 }
-/*
-#educationText p {
-  margin-bottom: .25rem;
-  font-size: 18px;
-}
-#educationText span {
-  margin-bottom: .5rem;
-}
-*/
 #courses {
   padding-left: 1rem;
 }
 #certs {
   padding-left: 2rem;
+}
+@media (max-width: 800px) {
+  .textBox {
+    width: auto;
+    justify-content: space-around;
+    /*
+    border: 1px black solid;
+    box-shadow: 1px 1px 4px;
+    */
+    border: 2px black solid;
+    margin: 0 2rem 3rem 2rem;
+    padding: 1rem;
+  }
+}
+@media (max-width: 500px) {
+  #educationContainer2 {
+    padding: 4rem 1rem 1rem 1rem;
+  }
 }
 
 
@@ -385,6 +480,7 @@ body, html {
 
 #aboutMeContainer2 {
   padding: 4rem 10rem;
+  
 }
 
 #aboutMeContainer2 img {
@@ -392,6 +488,13 @@ body, html {
 }
 #aboutText2 {
   width: 40%;
+  /*
+  height: 375px;
+  */
+  /*
+  height: 400px;
+  */
+  
 }
 #aboutText2 h2 {
   font-size: 30px;
@@ -407,6 +510,81 @@ body, html {
 #aboutText2 a:hover {
   text-decoration: underline;
 }
+#aboutPicContainer {
+  /*
+  height: 400px;
+  */
+  
+}
+#aboutPic {
+  
+  margin: 10px 0;
+  
+}
+@media (max-width: 1250px) {
+  #aboutMeContainer2 {
+    padding: 4rem 8rem;
+  }
+  #aboutPic {
+    /*
+    margin: 40px 0;
+    */
+  }
+  #aboutText2 {
+    width: 50%;
+  }
+}
+@media (max-width: 1000px) {
+  #aboutMeContainer2 {
+    padding: 4rem 4rem;
+  }
+}
+
+@media (max-width: 860px) {
+  #aboutMeContainer2 {
+    display: inline-block;
+    padding: 2rem 4rem;
+  }
+  #aboutText2 {
+    /*
+    width: 100%;
+    */
+    width: auto;
+    margin-bottom: 2rem;
+    /*
+    height: 250px;
+    */
+    display: flex;
+    justify-content: space-around;
+    /*
+    padding: 1rem;
+    */
+  }
+  #aboutTextMobileDiv {
+    width: 80%;
+  }
+  #aboutPicContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
+}
+@media (max-width: 720px) {
+  #aboutMeContainer2 {
+    padding: 2rem 2rem;
+  }
+}
+@media (max-width: 720px) {
+  #aboutMeContainer2 {
+    padding: 2rem 0;
+  }
+}
+
+
+
+
+
+
 
 
 
@@ -447,4 +625,75 @@ body, html {
   padding-left: 1rem;
   font-size: 14px;
   margin: 1rem 0;
+}
+#mobileEmail {
+  display: none;
+  border: 1px black solid;
+  width: auto;
+  padding: 1.5rem 1rem;
+  /*
+  height: 500px;
+  line-height: 500px;
+  */
+}
+#mobileEmail a {
+  color: black;
+  text-decoration: none;
+}
+#mobileEmail:hover {
+  cursor: pointer;
+  background-color: gold;
+}
+#mobileResume {
+  display: none;
+  border: 1px black solid;
+  width: auto;
+  padding: 1.5rem 1rem;
+}
+#mobileResume a {
+  color: black;
+  text-decoration: none;
+}
+#mobileResume:hover {
+  cursor: pointer;
+  background-color: gold;
+}
+
+@media (max-width: 930px) {
+  #contactContainer {
+    text-align: center;
+    padding: 2rem 1rem;
+  }
+  #desktopEmail {
+    display: none;
+  }
+  #desktopResume {
+    display: none;
+  }
+  #mobileEmail {
+    display: block;
+  }
+  #mobileResume {
+    display: block;
+  }
+  #emailContainer a:hover {
+    text-decoration: none;
+  }
+  #resumeContainer {
+    border: 1px black solid;
+  }
+  #contactBox {
+    margin-bottom: 2rem;
+    font-family: 'Arial';
+  }
+  #mobileWidgetDiv {
+    justify-content: center;
+  }
+  #footer {
+    margin: 2rem 0;
+  }
+}
+
+.border {
+  border: 1px black solid;
 }
